users_list endpoint added
